--- a/SITE/src/main/resources/templates/staff_projects.html
+++ b/SITE/src/main/resources/templates/staff_projects.html
@@ -117,14 +117,14 @@
                   th:href="@{'/staff/projects/edit/' + ${project.id}}"
                   class="btn btn-outline-primary action-btn"
                 >
-                  <i class="fas fa-edit me-2"></i>Edit
+                  <i class="fas fa-edit me-2"></i>
                 </a>
                 <a
                   th:href="@{'/staff/projects/delete/' + ${project.id}}"
                   class="btn btn-outline-danger action-btn"
                   onclick="return confirm('Confirm project deletion?')"
                 >
-                  <i class="fas fa-trash-alt me-2"></i>Delete
+                  <i class="fas fa-trash-alt me-2"></i>
                 </a>
               </td>
             </tr>
