--- a/SITE/src/main/resources/templates/staff_projects.html
+++ b/SITE/src/main/resources/templates/staff_projects.html
@@ -64,6 +64,7 @@
           <thead>
             <tr>
               <th class="py-3">Project Title</th>
+              <th class="py-3">Research Focus</th>
               <th class="py-3">Category</th>
               <th class="py-3">Restrictions</th>
               <th class="py-3">Status</th>
@@ -75,6 +76,7 @@
           <tbody>
             <tr th:each="project : ${projects}">
               <td class="fw-medium" th:text="${project.title}"></td>
+              <td th:text="${#strings.listJoin(project.researchFocus, ', ')}"></td>
               <td th:text="${#strings.listJoin(project.category, ', ')}"></td>
               <td>
                 <ul class="list-unstyled mb-0">
