--- a/SITE/src/main/resources/templates/student_projects.html
+++ b/SITE/src/main/resources/templates/student_projects.html
@@ -155,6 +155,14 @@
                             </div>
 
                             <div class="mb-3">
+                                <strong>Research Focus:</strong>
+                                <div class="category-list">
+                                    <span th:each="cat: ${project.researchFocus}" class="category-badge"
+                                          th:text="${cat}"></span>
+                                </div>
+                            </div>
+
+                            <div class="mb-3">
                                 <strong>Category:</strong>
                                 <div class="category-list">
                                     <span th:each="cat: ${project.category}" class="category-badge"
