--- a/SITE/src/main/resources/templates/new_project.html
+++ b/SITE/src/main/resources/templates/new_project.html
@@ -115,10 +115,12 @@
                 th:field="*{researchFocus}"
                 required
               >
-                <option value="Senior Design Project">Senior Design Project</option>
+                <option value="Senior Design Project">
+                  Senior Design Project
+                </option>
                 <option value="Research Project">Research Project</option>
               </select>
-            </div>          
+            </div>
 
             <div id="categoryError" class="error-message"></div>
             <div class="mb-4">
@@ -189,7 +191,7 @@
                   />
                   <span class="form-check-label">Software Development</span>
                 </label>
-              </div>     
+              </div>
             </div>
 
             <div id="studyYearError" class="error-message"></div>
