--- a/SITE/src/main/resources/templates/student_projects.html
+++ b/SITE/src/main/resources/templates/student_projects.html
@@ -274,7 +274,44 @@
           </div>
         </div>
       </div>
-
+      <div class="d-flex justify-content-center mt-4">
+        <nav>
+          <ul class="pagination">
+            <li
+              class="page-item"
+              th:classappend="${currentPage == 0} ? 'disabled'"
+            >
+              <a
+                class="page-link"
+                th:href="@{/student/projects(page=${currentPage - 1})}"
+                >Previous</a
+              >
+            </li>
+            <li
+              class="page-item"
+              th:each="i : ${#numbers.sequence(0, totalPages - 1)}"
+              th:classappend="${i == currentPage} ? 'active'"
+            >
+              <a
+                class="page-link"
+                th:href="@{/student/projects(page=${i})}"
+                th:text="${i + 1}"
+                >1</a
+              >
+            </li>
+            <li
+              class="page-item"
+              th:classappend="${currentPage == totalPages - 1} ? 'disabled'"
+            >
+              <a
+                class="page-link"
+                th:href="@{/student/projects(page=${currentPage + 1})}"
+                >Next</a
+              >
+            </li>
+          </ul>
+        </nav>
+      </div>
       <footer class="mt-5 text-center text-secondary">
         <small>&copy; 2025 ADA University</small>
       </footer>
