--- a/SITE/src/main/resources/templates/student_projects.html
+++ b/SITE/src/main/resources/templates/student_projects.html
@@ -89,15 +89,25 @@
               </div>
               <div class="col-md-3">
                 <input
-                  type="text"
-                  class="form-control"
-                  id="supervisor"
-                  name="supervisorName"
-                  placeholder="Supervisor"
-                  th:value="${supervisorName}"
+                    type="text"
+                    class="form-control"
+                    id="supervisorName"
+                    name="supervisorName"
+                    placeholder="Supervisor First Name"
+                    th:value="${supervisorName}"
                 />
               </div>
-              <div class="col-md-3 text-end">
+              <div class="col-md-3">
+                <input
+                    type="text"
+                    class="form-control"
+                    id="supervisorSurname"
+                    name="supervisorSurname"
+                    placeholder="Supervisor Last Name"
+                    th:value="${supervisorSurname}"
+                />
+              </div>                  
+              <div class="col-md-12 text-end">
                 <button type="submit" class="btn btn-primary">
                   <i class="fas fa-search me-2"></i>Search Projects
                 </button>
