--- a/SITE/src/main/resources/templates/new_project.html
+++ b/SITE/src/main/resources/templates/new_project.html
@@ -123,74 +123,12 @@
             </div>
 
             <div id="categoryError" class="error-message"></div>
+
             <div class="mb-4">
               <label class="form-label">
                 <i class="bi bi-list me-2 text-secondary"></i>Categories
               </label>
-              <div class="checkbox-group">
-                <label class="form-check form-check-inline">
-                  <input
-                    class="form-check-input"
-                    type="checkbox"
-                    th:field="*{category}"
-                    value="Artificial Intelligence"
-                  />
-                  <span class="form-check-label">Artificial Intelligence</span>
-                </label>
-                <label class="form-check form-check-inline">
-                  <input
-                    class="form-check-input"
-                    type="checkbox"
-                    th:field="*{category}"
-                    value="Software Engineering"
-                  />
-                  <span class="form-check-label">Software Engineering</span>
-                </label>
-                <label class="form-check form-check-inline">
-                  <input
-                    class="form-check-input"
-                    type="checkbox"
-                    th:field="*{category}"
-                    value="Cybersecurity"
-                  />
-                  <span class="form-check-label">Cybersecurity</span>
-                </label>
-                <label class="form-check form-check-inline">
-                  <input
-                    class="form-check-input"
-                    type="checkbox"
-                    th:field="*{category}"
-                    value="Data Science"
-                  />
-                  <span class="form-check-label">Data Science</span>
-                </label>
-                <label class="form-check form-check-inline">
-                  <input
-                    class="form-check-input"
-                    type="checkbox"
-                    th:field="*{category}"
-                    value="Networks"
-                  />
-                  <span class="form-check-label">Networks</span>
-                </label>
-                <label class="form-check form-check-inline">
-                  <input
-                    class="form-check-input"
-                    type="checkbox"
-                    th:field="*{category}"
-                    value="Web Development"
-                  />
-                  <span class="form-check-label">Web Development</span>
-                </label>
-                <label class="form-check form-check-inline">
-                  <input
-                    class="form-check-input"
-                    type="checkbox"
-                    th:field="*{category}"
-                    value="Software Development"
-                  />
-                  <span class="form-check-label">Software Development</span>
-                </label>
+              <div class="checkbox-group" id="categoriesContainer">
               </div>
             </div>
 
