--- a/SITE/src/main/resources/templates/new_project.html
+++ b/SITE/src/main/resources/templates/new_project.html
@@ -128,8 +128,7 @@
               <label class="form-label">
                 <i class="bi bi-list me-2 text-secondary"></i>Categories
               </label>
-              <div class="checkbox-group" id="categoriesContainer">
-              </div>
+              <div class="checkbox-group" id="categoriesContainer"></div>
             </div>
 
             <div id="studyYearError" class="error-message"></div>
