File Name Modifications (ProjectID) and PDF Validation Added

--- a/SITE/src/main/resources/templates/edit_project.html
+++ b/SITE/src/main/resources/templates/edit_project.html
@@ -217,7 +217,7 @@
                   </li>                
               </ul>
           
-              <input type="file" id="fileInput" name="files" class="form-control mb-3" multiple>
+              <input type="file" id="fileInput" name="files" accept=".pdf" class="form-control mb-3" multiple>
           
               <ul id="newFileList" class="list-group"></ul>
             </div>
